examples/test/testpolicy3047.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3047
  namespace: namespace36
spec:
  podSelector:
    matchLabels:
      key40: value6
      key31: value44
      key7: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value30
          key41: value7
      podSelector:
        matchLabels:
          key12: value14
          key27: value29
